test/testdata/classes/methods/init/return_value_error.lox
class Foo {
    init() {
        fun() {
            return 1;
        }();
        return 2; // error: init() cannot return a value
    }
}

_ = Foo; // suppress unused declaration error
